Fixed missing margin below category image

--- a/web/css/layout/_content.less
+++ b/web/css/layout/_content.less
@@ -16,6 +16,7 @@
 
     // Layout
     .page-main > .columns {
+        margin-top: @4;
         position: relative;
         display: grid;
         grid-template-rows: auto 1fr;
