--- a/web/css/layout/_layered-navigation.less
+++ b/web/css/layout/_layered-navigation.less
@@ -135,7 +135,7 @@
     @media @media-md {
         .column.main {
             .block.filter {
-                margin: @4 0;
+                margin: 0 0 @4;
 
                 .filter-title {
                     display: none;
